--- a/docs/source/notebooks/mofatalk.ipynb
+++ b/docs/source/notebooks/mofatalk.ipynb
@@ -232,22 +232,22 @@
      "output_type": "stream",
      "text": [
       "Now running: ctrl&101:   0%|          | 0/16 [00:00<?, ?it/s]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&107:   6%|▋         | 1/16 [00:06<01:42,  6.85s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1015:  12%|█▎        | 2/16 [00:12<01:25,  6.11s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1016:  19%|█▉        | 3/16 [00:20<01:33,  7.21s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1039:  25%|██▌       | 4/16 [00:27<01:21,  6.81s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1244:  31%|███▏      | 5/16 [00:32<01:07,  6.15s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1256:  38%|███▊      | 6/16 [00:38<01:02,  6.27s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1488:  44%|████▍     | 7/16 [00:45<00:58,  6.51s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&101:  50%|█████     | 8/16 [00:52<00:53,  6.66s/it] /home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&107:  56%|█████▋    | 9/16 [00:59<00:47,  6.76s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1015:  62%|██████▎   | 10/16 [01:05<00:39,  6.59s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1016:  69%|██████▉   | 11/16 [01:14<00:36,  7.28s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1039:  75%|███████▌  | 12/16 [01:30<00:39,  9.82s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1244:  81%|████████▏ | 13/16 [01:54<00:42, 14.04s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1256:  88%|████████▊ | 14/16 [02:01<00:23, 11.93s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1488:  94%|█████████▍| 15/16 [02:08<00:10, 10.63s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1488: 100%|██████████| 16/16 [02:17<00:00,  8.59s/it]\n"
+      "Now running: ctrl&107:   6%|▋         | 1/16 [00:06<01:30,  6.05s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1015:  12%|█▎        | 2/16 [00:11<01:16,  5.49s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1016:  19%|█▉        | 3/16 [00:19<01:26,  6.62s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1039:  25%|██▌       | 4/16 [00:25<01:16,  6.38s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1244:  31%|███▏      | 5/16 [00:30<01:08,  6.19s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1256:  38%|███▊      | 6/16 [00:37<01:03,  6.37s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1488:  44%|████▍     | 7/16 [00:44<00:59,  6.62s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&101:  50%|█████     | 8/16 [00:51<00:52,  6.62s/it] /home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&107:  56%|█████▋    | 9/16 [00:57<00:45,  6.51s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1015:  62%|██████▎   | 10/16 [01:02<00:36,  6.03s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1016:  69%|██████▉   | 11/16 [01:10<00:32,  6.60s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1039:  75%|███████▌  | 12/16 [01:17<00:26,  6.60s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1244:  81%|████████▏ | 13/16 [01:22<00:18,  6.25s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1256:  88%|████████▊ | 14/16 [01:29<00:13,  6.52s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1488:  94%|█████████▍| 15/16 [01:37<00:06,  6.89s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1488: 100%|██████████| 16/16 [01:45<00:00,  6.62s/it]\n"
      ]
     }
    ],
@@ -516,7 +516,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8750229661739)>"
+       "<ggplot: (8751753759570)>"
       ]
      },
      "execution_count": 10,
@@ -576,7 +576,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 44/44 [00:00<00:00, 204.42it/s]\n"
+      "100%|██████████| 44/44 [00:00<00:00, 228.12it/s]\n"
      ]
     }
    ],
@@ -611,6 +611,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-info\">\n",
+    "\n",
     "**Note**\n",
     "    \n",
     "<h5> View Representation </h5>\n",
@@ -1089,7 +1091,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8750204794877)>"
+       "<ggplot: (8751724663289)>"
       ]
      },
      "execution_count": 17,
@@ -1252,7 +1254,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8750205180775)>"
+       "<ggplot: (8751725001521)>"
       ]
      },
      "execution_count": 20,
@@ -1357,7 +1359,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8750204801853)>"
+       "<ggplot: (8751724703390)>"
       ]
      },
      "execution_count": 23,
@@ -1785,7 +1787,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8750204363002)>"
+       "<ggplot: (8751724207366)>"
       ]
      },
      "execution_count": 28,
@@ -1853,7 +1855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
